# Shop---FastAPI---SQLAlchemy

./: .dockerignore  Dockerfile  README.md  TODO.md  docker-compose.yaml  start
backend/: 1.py  2.py  3.py  4.py  =2.0  alembic.ini  config.py  data_test.py  demo_data.py  env_example  main.py  pyproject.toml  pytest.ini  start_data.py
backend/alembic/versions/: 2025_06_10_0029-51d70943ea10_migrate_1.py
backend/app/core/: headers.py  security.py
backend/app/core/models/: 11.py  __init__.py  base.py  db_helper.py  shop.py  users.py
backend/app/models/: __init__.py  base.py  db_helper.py  shop.py  users.py
backend/app/shopcase/: crud_cart.py  crud_shop.py  schemas.py  view.py
backend/app/users/: authorization.py  crud.py  rbac.py  schemas.py  security.py  views.py
backend/tests/: 111conftest.py  1test_users.py  _test_shop.py  _test_user_auth.py  _test_user_crud.py  _test_users.py  conftest.py  fixture.py  qtest_2.py  test_cart.py  test_shop.py  test_user_auth.py  test_user_crud.py  test_users.py  wtest_user1.py
